<resources>
    <string name="app_name">音乐</string>
    <string name="navigation_theme_item">个性装扮</string>
    <string name="close_in_time_item">定时关闭</string>
    <string name="help_item">帮助与反馈</string>
    <string name="teenager_model_item">青少年模式</string>
    <string name="exit_text">退出登录/关闭</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">手机号</string>
    <string name="hint_repwd">确认您的密码</string>
    <string name="hint_pwd">输入您的密码</string>
    <string name="hint_nickname">输入您的昵称</string>

    <string-array name="bannerImages">
        <item>@mipmap/live1</item>
        <item>@mipmap/youth</item>
        <item>@mipmap/yellowling</item>
        <item>@mipmap/tashanhe</item>
    </string-array>


</resources>