<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sign_frag_height"
    android:padding="@dimen/padding_default_size"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=" "
            android:hint="@string/hint_username"
            android:theme="@style/EditTextTheme"></EditText>

        <ImageView
            android:layout_width="@dimen/icon_default_size"
            android:layout_height="@dimen/icon_default_size"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/user_login" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height_size"
        android:layout_marginTop="@dimen/margin_default_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height_size"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="210dp" />

        <ImageView
            android:layout_width="@dimen/icon_default_size"
            android:layout_height="@dimen/icon_default_size"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/lock" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height_size"
        android:layout_marginTop="@dimen/margin_default_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/repwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_repwd"
            android:inputType="textPassword"
            android:theme="@style/EditTextTheme"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="211dp" />

        <ImageView
            android:layout_width="@dimen/icon_default_size"
            android:layout_height="@dimen/icon_default_size"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/lock" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height_size"
        android:layout_marginTop="@dimen/margin_default_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:hint="@string/hint_nickname"
            android:theme="@style/EditTextTheme" />
    </RelativeLayout>


    <Button
        android:id="@+id/commit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="注册"
        android:textColor="@color/design_default_color_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />



</androidx.constraintlayout.widget.ConstraintLayout>